css_feito-o_caos

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bibloteca Balan</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Caos Mobile First</h1>
-    <h2>textando o vercel</h2>
+    <h1 class="titulo">Caos Mobile First</h1>
+    <h2 class="titulo">textando o vercel</h2>
     
 </body>
 </html>
