--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Bibloteca Balan</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="header.css">
+    
 </head>
 <body>
     <h1 class="titulo">Caos Mobile First</h1>
