--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Bibloteca Balan</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="header.css">
+    <link rel="stylesheet" href="styles/header.css">
     
 </head>
 <body>
