--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h2 class="titulo">textando o vercel</h2>
     <header class="cabecalho">
         <span class="cabecalho__menu-hamburguer">Menu</span>
-        <img src="imagens/Logo.svg" alt="Logotipo da Biblioteca Start">
+        <img src="imagens/17580923-logotipo-da-letra-b-com-coroa-e-forma-de-amor-gratis-vetor.jpg.svg" alt="Logotipo da Biblioteca Start">
         <a href="#"><img src="imagens/Favoritos.svg" alt="Meus favoritos"></a>
         <a href="#"><img src="imagens/Emprestimos.svg" alt="Meus Emprestimos"></a>
         <a href="#"><img src="imagens/Usuario.svg" alt="Meu Perfil"></a>
