--- a/index.html
+++ b/index.html
@@ -13,12 +13,15 @@
     <h1 class="titulo">Caos Mobile First</h1>
     <h2 class="titulo">textando o vercel</h2>
     <header class="cabecalho">
-        <span class="cabecalho__menu-hamburguer">Menu</span>
-        <img src="imagens/Logo.svg" alt="Logotipo da Biblioteca Start">
-        <a href="#"><img src="imagens/Favoritos.svg" alt="Meus favoritos"></a>
-        <a href="#"><img src="imagens/Emprestimos.svg" alt="Meus Emprestimos"></a>
-        <a href="#"><img src="imagens/Usuario.svg" alt="Meu Perfil"></a>
+        <div class="container">
+          <span class="cabecalho__menu-hamburguer"></span>
+             <img src="imagens/Logo.svg" alt="Logotipo da Biblioteca Start">
+        </div>
+        <div class="container">
+           <a href="#"><img src="imagens/Favoritos.svg" alt="Meus Favoritos"></a>
+             <a href="#"><img src="imagens/Emprestimos.svg" alt="Meus Emprsstimos"></a>
+             <a href="#"><img src="imagens/Usuario.svg" alt="Meu Perfil"></a>
+        </div>
     </header>
-    
 </body>
 </html>
